# lazywrapper

./: .gitignore  .readthedocs.yaml  LICENSE.md  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
docs/: api.rst  conf.py  index.rst
docs/_templates/: footer_end.html
src/lazywrapper/: __init__.py  lazywrap.py
